--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
 language: node_js
 node_js:
-  - "8.1.2"
-  - "7.7.1"
-  - "6.11.0"
-  - "5.0.0"
-script:
-  - yarn build
-install:
-  - yarn install
+  - "iojs"
+  - "7"
