--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:v:build": "yarn test:v:clean && loch:build -e dev -s src -d dist -j src/defaults.json",
     "test:v:buildFresh": "concurrently \"yarn build\" \"yarn test:v:build\"",
     "test:visuals": "yarn test:v:clean && yarn build && yarn test:v:build && yarn test:v",
-    "tdd": "karma start --autoWatch=true --singleRun=false",
+    "tdd": "karma start --reporters=mocha,notification --autoWatch=true --singleRun=false",
     "svgSprite": "./.prep-icon.sh  > /dev/null && ./.generate-sprite.sh  > /dev/null",
     "updateSprite": "yarn svgSprite && cp src/Icon/sprite.html dist/sprite.html && echo 'updated dist sprite'",
     "updateStyles": "yarn dist && cp dist/styles.css dist/styles.scss && echo 'updated nessie dist styles'",
